Archive2/d8/6d44b539a7ce6a/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <studio
   ^
main.cpp:2:22: fatal error: límites: No such file or directory
 # include <límites> 
                      ^
compilation terminated.
